lsm_training_16940687.err
  File "/leonardo/home/userexternal/kardaneh/RTnn/src/main_lsm.py", line 37
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
